This file holds the changes of the AIT QKD R10 throughout the versions
======================================================================


Changes from 9.9999.6 to 9.9999.7
---------------------------------




Changes from 9.9999.5 to 9.9999.6
---------------------------------

* revamp of key synchronization

    New key sync protocol introduces a new step when picking
    a key. This is yet more stable and recovers broken 
    pipelines at either side.


Changes from 9.9999.4 to 9.9999.5
---------------------------------

* writing keys to void pipe_out does now increment key stats

    Writing keys to void (empty) pipe_out connection does now
    increment key_bits_outgoing, keys_outgoing and the
    corresponding rate numbers.
    
    Rationale: void (empty) is always "good"; so a write to
    /dev/null is basically the same and therefore successful
    and as such it has to increase the numbers of successfully
    written data.

* module's "stalled" property renamed to "idle"

* modules can now enumerate the paths on connections

    Each module has listen, peer, pipe_in and pipe_out connections.
    On each connections a (theretical) arbitrary number of paths to
    remotes are allowed. On configuration these paths are seperated
    with semicolon ';' in the set_url_* functions.
    
    qkd::module::module does now support enumeration of configured
    paths at runtime. Utilizing the qkd::module::module::process()
    function for the workload (qkd::module::workload) the path 
    index to be used for forwarding the key to the next module can
    now be specified. A path index of -1 indicates that the libqkd
    framework should choose a suitable path on its own.

* Dropped support of various timeout on read/recv/send/write

    Due to causing various timing conflicts general timeout support
    on the API has been dropped. The current timeout values are:
    
        - read - read a key from previous module: 1000ms