@@ -132,3 +132,14 @@ qkd::utility::memory crypto_null::state_internal() const {
     return cNullState;
 }
 
+
+/**
+ * return the current calculated tag of the crypto context (if any)
+ * 
+ * @return  a memory BLOB defining the current tag
+ */
+qkd::utility::memory crypto_null::tag_internal() const {
+    static qkd::utility::memory cNullTag;
+    return cNullTag;
+}
+
