@@ -5,7 +5,11 @@ This file holds the changes of the AIT QKD R10 throughout the versions
 Changes from 9.9999.6 to 9.9999.7
 ---------------------------------
 
+* crypto context now supports tag()
 
+    All crypto context now support the tag() function. This is
+    similar to the state(), however only the current tag value
+    is returned.
 
 
 Changes from 9.9999.5 to 9.9999.6
